# SussyBot

./: CMakeLists.txt
include/: commands.h
lib/sajf/: CMakeLists.txt
lib/sajf/include/sajf/: bot.h  command.h  queue.h  sajf.h  song.h
lib/sajf/src/: bot.cpp  command.cpp  queue.cpp  song.cpp
src/: commands.cpp  main.cpp
